--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,13 +8,24 @@
 
 
     <Button
-        android:id="@+id/btnHello"
-        android:layout_width="wrap_content"
+        android:id="@+id/btnJava"
+        android:layout_width="230dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="176dp"
-        android:text="Button"
+        android:layout_marginTop="170dp"
+        android:text="VIEW BINDING - JAVA"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnKotlin"
+        android:layout_width="230dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="110dp"
+        android:text="VIEW BINDING - KOTLIN"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnJava" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
